...
  return (
    <ScrollView
      style={{ backgroundColor: colors.background }}
      contentContainerStyle={styles.content}
      contentInsetAdjustmentBehavior="automatic"
      showsVerticalScrollIndicator={false}
      testID="monthly-comparison-screen"
    >
      {months.length ? (
        <MonthlyComparison initialMonth={month} months={months} />
      ) : (
        <Loading loading={loading} />
      )}
...
